<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">


        <LinearLayout
            android:id="@+id/topSection"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="#C4C4C4"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/ic_arrow_back"
                android:padding="10dp"
                android:contentDescription="@string/back_button"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"/>


            <TextView
                android:id="@+id/tvMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/movie_title"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="40dp"
                    android:layout_height="26dp"
                    android:background="#1DB954"
                    android:text="@string/rating_13"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>


                <TextView
                    android:layout_width="36dp"
                    android:layout_height="26dp"
                    android:background="@drawable/border_white"
                    android:text="@string/language_en"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screenx"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@android:drawable/ic_menu_mylocation"
                            app:tint="#5f666e "
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:text="@string/theater"
                            android:textColor="#5f666e "
                            android:textSize="11sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:text="@string/theater_name"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="4dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@android:drawable/ic_menu_slideshow"
                            app:tint="#5f666e "
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:text="@string/hall"
                            android:textColor="#5f666e "
                            android:textSize="11sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:text="@string/hall_number"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="4dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@android:drawable/ic_menu_today"
                            app:tint="#5f666e "
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:text="@string/date"
                            android:textColor="#5f666e "
                            android:textSize="11sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:text="@string/date_value"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="4dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:src="@android:drawable/ic_lock_idle_alarm"
                            app:tint="#5f666e "
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:text="@string/time"
                            android:textColor="#5f666e "
                            android:textSize="11sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:text="@string/time_value"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/screenArc"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_below="@id/topSection"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:scaleType="fitXY"
            android:src="@drawable/arc" />

        <GridLayout
            android:id="@+id/seatGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/screenArc"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:columnCount="8" />

        <LinearLayout
            android:id="@+id/legend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seatGrid"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/circle_booked"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booked"
                android:textColor="#FFFFFF"
                android:layout_marginStart="4dp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/circle_yours"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yours"
                android:textColor="#FFFFFF"
                android:layout_marginStart="4dp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/circle_available"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textColor="#FFFFFF"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/legend"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBookSeats"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF3B30"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/book_seats"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnProceedSnacks"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ellipsize="end"
                android:enabled="false"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/add_snacks"
                android:textColor="#FF3B30"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>