<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tvSelectItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_items"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvSnacksAndDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks_amp_drinks"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <ListView
        android:id="@+id/lvSnacks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:background="#000000" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:backgroundTint="#FF0000"
        android:textColor="#FFFFFF"
        android:layout_margin="16dp"/>

</LinearLayout>
