<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinefast"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/dateToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:background="@drawable/radio_button_background"
            android:textColor="@android:color/white"
            android:button="@null"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@android:drawable/ic_menu_today"
            android:drawablePadding="8dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            android:background="@drawable/radio_button_background"
            android:drawableLeft="@android:drawable/ic_menu_today"
            android:textColor="@android:color/white"
            android:button="@null"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawablePadding="8dp"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/nowShowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_showing"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:radius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/rounded_background"
                android:padding="10dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dark_knight"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:radius="15dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_dark_knight"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_knight_genre"
                        android:textColor="#BBBBBB"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bookSeats1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_seats"
                            android:textColor="@android:color/white"
                            android:background="@drawable/rect_button"
                            app:backgroundTint="@null"
                            app:cornerRadius="0dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/trailer1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailer"
                            android:textColor="@android:color/black"
                            android:background="@drawable/white_button_selector"
                            app:icon="@drawable/ic_trailer_play"
                            app:iconGravity="textStart"
                            app:iconPadding="8dp"
                            android:layout_marginStart="8dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            app:cornerRadius="24dp"
                            app:backgroundTint="@null"
                            app:rippleColor="#DDDDDD"/>




                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:radius="15dp"
                android:background="@drawable/rounded_background"
                android:padding="10dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/inception"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inception"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inception_genre"
                        android:textColor="#BBBBBB"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bookSeats2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_seats"
                            android:textColor="@android:color/white"
                            android:background="@drawable/rect_button"
                            app:backgroundTint="@null"
                            app:cornerRadius="0dp"/>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/trailer2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailer"
                            android:textColor="@android:color/black"
                            android:background="@drawable/white_button_selector"
                            app:icon="@drawable/ic_trailer_play"
                            app:iconGravity="textStart"
                            app:iconPadding="8dp"
                            android:layout_marginStart="8dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            app:cornerRadius="24dp"
                            app:backgroundTint="@null"
                            app:rippleColor="#DDDDDD"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/rounded_background"
                android:padding="10dp"
                android:radius="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/interstellar"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interstellar"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interstellar_genre"
                        android:textColor="#BBBBBB"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/bookSeats3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_seats"
                            android:textColor="@android:color/white"
                            android:background="@drawable/rect_button"
                            app:backgroundTint="@null"
                            app:cornerRadius="0dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/trailer3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailer"
                            android:textColor="@android:color/black"
                            android:background="@drawable/white_button_selector"
                            app:icon="@drawable/ic_trailer_play"
                            app:iconGravity="textStart"
                            app:iconPadding="8dp"
                            android:layout_marginStart="8dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            app:cornerRadius="24dp"
                            app:backgroundTint="@null"
                            app:rippleColor="#DDDDDD"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
